--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,27 @@ button {
     font-size: 1.25rem;
     text-transform: none; }
 
+button:hover {
+  background-color: #4fa8a3; }
+
 form {
-  background-color: #D5D5D5; }
+  background-color: #D5D5D5;
+  border-radius: 10px; }
+  form .formWidth {
+    width: 80%;
+    margin: 0 auto;
+    padding: 15px 0; }
+  form input {
+    border-radius: 10px; }
+  form p {
+    margin: 0; }
+  form #fname, form #lname {
+    width: 49%;
+    margin-top: 15px; }
+  form #email, form #phone {
+    width: 100%; }
+  form button {
+    width: 100%; }
 
 .clearfix::after {
   content: "";
@@ -54,6 +73,10 @@ section:nth-child(1) {
   background-color: #39474e; }
 
 section:nth-child(3) {
+  background-color: #D5D5D5;
+  border: 1px solid lightgray; }
+
+section:nth-child(4) {
   background-color: #D5D5D5;
   border: 1px solid lightgray; }
 
@@ -95,5 +118,26 @@ section:nth-child(2) {
 
 .courseInfo {
   padding: 25px 5px; }
+
+.courses {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center; }
+
+.frontEnd {
+  color: orange; }
+
+.backEnd {
+  color: darkred; }
+
+.mobile {
+  color: darkyellow; }
+
+.interface {
+  color: blue; }
+
+.courseIcons img {
+  width: 25%;
+  border: 1px solid black; }
 
 /*# sourceMappingURL=style.css.map */
