--- a/css/style.scss
+++ b/css/style.scss
@@ -60,11 +60,44 @@ button {
     text-transform: none;
   }
 }
+
+button:hover {
+  background-color: #4fa8a3;
+}
+
 //////////////////////////////////
 
 // Form Style //////////////////
 form {
   background-color: $accent-color;
+  border-radius: 10px;
+
+  .formWidth {
+    width: 80%;
+    margin: 0 auto;
+    padding: 15px 0;
+  }
+
+  input {
+    border-radius: 10px;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  #fname, #lname {
+    width: 49%;
+    margin-top: 15px;
+  }
+
+  #email, #phone {
+    width: 100%;
+  }
+
+  button {
+    width: 100%;
+  }
 }
 //////////////////////////////////
 
@@ -81,7 +114,10 @@ section:nth-child(3) {
   background-color: $accent-color;
   border: 1px solid lightgray;
 }
-
+section:nth-child(4) {
+  background-color: $accent-color;
+  border: 1px solid lightgray;
+}
 /////////////////////////////////
 /////// Navigation /////////////
 ///////////////////////////////
@@ -147,8 +183,31 @@ section:nth-child(2) {
 }
 
 /////////////////////////////////
-/////// INFO SECTION ///////
+/////// INFO SECTION + COURSES /
 ///////////////////////////////
 .courseInfo {
   padding: 25px 5px;
+}
+
+.courses {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.frontEnd {
+  color: orange;
+}
+.backEnd {
+  color: darkred;
+}
+.mobile {
+  color: darkyellow;
+}
+.interface {
+  color: blue;
+}
+.courseIcons img {
+  width: 25%;
+  border: 1px solid black;
 }
