--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,17 @@ h3 {
   font-size: 3rem;
   font-style: italic;
   font-weight: 700;
-  color: #39474e; }
+  color: #727d84;
+  padding: 10px 0; }
 
 h4 {
   color: white;
   font-size: 5rem; }
 
 h5 {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: #727d84; }
 
 h6 {
   color: white;
@@ -39,8 +42,9 @@ button {
   border: none; }
   button p {
     color: white;
-    font-size: 1.25rem;
-    text-transform: none; }
+    font-size: 1.5rem;
+    text-transform: none;
+    margin: 0; }
 
 button:hover {
   background-color: #4fa8a3; }
@@ -64,6 +68,16 @@ form {
   form button {
     width: 100%; }
 
+.letsTalk form .formWidth {
+  width: 90%;
+  margin: 0 auto;
+  padding: 5px 0; }
+.letsTalk form #fname, .letsTalk form #lname {
+  width: 48%;
+  margin-top: 15px; }
+.letsTalk form input {
+  font-size: 1.4rem; }
+
 .clearfix::after {
   content: "";
   display: block;
@@ -72,11 +86,7 @@ form {
 section:nth-child(1) {
   background-color: #39474e; }
 
-section:nth-child(3) {
-  background-color: #D5D5D5;
-  border: 1px solid lightgray; }
-
-section:nth-child(4) {
+.newsline {
   background-color: #D5D5D5;
   border: 1px solid lightgray; }
 
@@ -119,25 +129,132 @@ section:nth-child(2) {
 .courseInfo {
   padding: 25px 5px; }
 
-.courses {
+.courseOffered {
+  background-color: #D5D5D5;
+  text-align: center; }
+  .courseOffered .container {
+    padding: 25px 115px; }
+
+.course {
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.75rem;
   text-align: center; }
 
 .frontEnd {
-  color: orange; }
+  color: #ce832d; }
 
 .backEnd {
-  color: darkred; }
+  color: #b8584c; }
 
 .mobile {
-  color: darkyellow; }
+  color: #d3b42b; }
 
 .interface {
-  color: blue; }
+  color: #35a0ad; }
 
 .courseIcons img {
-  width: 25%;
-  border: 1px solid black; }
+  width: 50%;
+  padding-bottom: 10px; }
+
+.students {
+  padding: 25px 0; }
+  .students .four:nth-child(n+2) {
+    text-align: center; }
+    .students .four:nth-child(n+2) .details {
+      text-align: left;
+      margin-bottom: 10px; }
+  .students img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 2px solid orange; }
+
+.quoteName {
+  color: #727d84;
+  font-weight: 700;
+  margin-bottom: 10px; }
+
+.details {
+  color: #727d84;
+  font-weight: normal; }
+
+.name {
+  color: #6fbbb7;
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 0; }
+
+.jobDescription {
+  color: #727d84;
+  font-size: 2rem;
+  margin: 0; }
+
+.employers {
+  width: 100%;
+  background-image: url("../images/employers-image.jpg");
+  background-size: cover; }
+  .employers .container {
+    padding: 25px 125px;
+    text-align: center; }
+    .employers .container .row {
+      color: white; }
+      .employers .container .row h3 {
+        color: white; }
+      .employers .container .row button {
+        margin-top: 50px; }
+    .employers .container img {
+      width: 75%; }
+
+.letsTalk {
+  padding: 25px 0; }
+
+footer {
+  height: 50px;
+  background-color: #39474e; }
+
+@media screen and (max-width: 400px) {
+  h4 {
+    font-size: 3rem; }
+
+  section:nth-child(1) {
+    text-align: center; }
+
+  ul {
+    display: inline-block; }
+    ul li a {
+      text-decoration: none;
+      color: white; }
+
+  .navLeft {
+    float: none; }
+    .navLeft li {
+      position: relative;
+      bottom: 10px; }
+      .navLeft li a {
+        font-size: 1.3rem; }
+      .navLeft li img {
+        position: relative;
+        top: 16px; }
+
+  .navRight {
+    float: none;
+    margin-right: 0; }
+    .navRight li a {
+      font-size: 1rem; }
+
+  section:nth-child(2) {
+    height: 300px; }
+
+  .heroText {
+    padding-top: 100px; }
+
+  .newsline {
+    display: none; }
+
+  .courseOffered .container {
+    padding: 25px 0; }
+  .courseOffered img {
+    width: 25%; } }
 
 /*# sourceMappingURL=style.css.map */
