--- a/css/style.scss
+++ b/css/style.scss
@@ -27,7 +27,8 @@ h3 {
   font-size: 3rem;
   font-style: italic;
   font-weight: 700;
-  color: #39474e;
+  color: $font-grey;
+  padding: 10px 0;
 }
 
 h4 {
@@ -37,6 +38,8 @@ h4 {
 
 h5 {
   text-transform: uppercase;
+  font-size: 2rem;
+  color: $font-grey;
 }
 
 h6 {
@@ -56,8 +59,9 @@ button {
 
   p {
     color: white;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     text-transform: none;
+    margin: 0;
   }
 }
 
@@ -99,6 +103,25 @@ form {
     width: 100%;
   }
 }
+// Let's Talk Form's
+.letsTalk {
+  form {
+    .formWidth {
+      width: 90%;
+      margin: 0 auto;
+      padding: 5px 0;
+    }
+
+    #fname, #lname {
+      width: 48%;
+      margin-top: 15px;
+    }
+
+    input {
+      font-size: 1.4rem;
+    }
+  }
+}
 //////////////////////////////////
 
 .clearfix::after {
@@ -110,14 +133,11 @@ form {
 section:nth-child(1) {
   background-color: $primary-color;
 }
-section:nth-child(3) {
+.newsline {
   background-color: $accent-color;
   border: 1px solid lightgray;
 }
-section:nth-child(4) {
-  background-color: $accent-color;
-  border: 1px solid lightgray;
-}
+
 /////////////////////////////////
 /////// Navigation /////////////
 ///////////////////////////////
@@ -189,25 +209,200 @@ section:nth-child(2) {
   padding: 25px 5px;
 }
 
-.courses {
+.courseOffered {
+  background-color: $accent-color;
+  text-align: center;
+
+  .container {
+    padding: 25px 115px;
+  }
+}
+
+.course {
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.75rem;
   text-align: center;
 }
 
 .frontEnd {
-  color: orange;
+  color: rgb(206,131,45);
 }
 .backEnd {
-  color: darkred;
+  color: rgb(184,88,76);
 }
 .mobile {
-  color: darkyellow;
+  color: rgb(211,180,43);
 }
 .interface {
-  color: blue;
+  color: rgb(53,160,173);
 }
 .courseIcons img {
-  width: 25%;
-  border: 1px solid black;
+  width: 50%;
+  padding-bottom: 10px;
+}
+
+/////////////////////////////////
+///////WHAT OUR STUDENTS SAY ///
+///////////////////////////////
+.students {
+  padding: 25px 0;
+
+  .four:nth-child(n+2){
+    text-align: center;
+
+    .details {
+      text-align: left;
+      margin-bottom: 10px;
+    }
+  }
+
+  img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 2px solid orange;
+  }
+}
+
+.quoteName {
+  color: $font-grey;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.details {
+  color: $font-grey;
+  font-weight: normal;
+}
+
+.name {
+  color: $secondary-color;
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 0;
+}
+
+.jobDescription {
+  color: $font-grey;
+  font-size: 2rem;
+  margin: 0;
+}
+
+/////////////////////////////////
+/////// EMPLOYERS SECTION ///////
+///////////////////////////////
+.employers {
+  width: 100%;
+  background-image: url("../images/employers-image.jpg");
+  background-size: cover;
+
+  .container {
+    padding: 25px 125px;
+    text-align: center;
+
+    .row {
+      color: white;
+
+      h3 {
+        color: white;
+      }
+
+      button {
+        margin-top: 50px;
+      }
+    }
+
+    img {
+      width: 75%;
+    }
+  }
+}
+/////////////////////////////////
+
+.letsTalk {
+  padding: 25px 0;
+}
+
+footer {
+  height: 50px;
+  background-color: $primary-color;
+}
+/////////////////////////////////
+/////// MEDIA QUERIES //////////
+///////////////////////////////
+
+@media screen and (max-width: 400px) {
+  h4 {
+    font-size: 3rem;
+  }
+
+  /////// Navigation /////////////
+  section:nth-child(1) {
+    text-align: center;
+  }
+
+  ul {
+    display: inline-block;
+
+    li {
+
+      a {
+        text-decoration: none;
+        color: white;
+      }
+    }
+  }
+
+  .navLeft{
+    float: none;
+
+    li {
+      position: relative;
+      bottom: 10px;
+
+      a {
+        font-size: 1.3rem;
+      }
+
+      img {
+        position: relative;
+        top: 16px;
+      }
+    }
+  }
+
+  .navRight{
+    float: none;
+    margin-right: 0;
+
+    li {
+
+      a {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  ///////////////////////////////
+  ////Hero Picture /////////////
+  section:nth-child(2) {
+    height: 300px;
+  }
+  .heroText {
+    padding-top: 100px;
+  }
+  ///////////////////////////////
+  .newsline {
+    display: none;
+  }
+
+  .courseOffered {
+    .container {
+      padding: 25px 0;
+    }
+    img {
+      width: 25%;
+    }
+  }
 }
