--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -181,7 +181,7 @@ input[type="button"] {
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
-  white-space: nowrap;
+  white-space: wrap;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid #bbb;
@@ -266,7 +266,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #33C3F0;
+  border: 2px solid #4D90FE;
   outline: 0; }
 label,
 legend {
