--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,7 @@
 @import "partials/variables";
+@import "partials/navigation";
+@import "partials/forms";
+@import "partials/buttons";
 
 /////////////////////////////////
 // Global Elements /////////////
@@ -51,79 +54,6 @@ img {
   width: 100%;
 }
 
-// Button Style //////////////////
-button {
-  background-color: $secondary-color;
-  margin-top: 10px;
-  border: none;
-
-  p {
-    color: white;
-    font-size: 1.5rem;
-    text-transform: none;
-    margin: 0;
-  }
-}
-
-button:hover {
-  background-color: #4fa8a3;
-}
-
-//////////////////////////////////
-
-// Form Style //////////////////
-form {
-  background-color: $accent-color;
-  border-radius: 10px;
-
-  .formWidth {
-    width: 80%;
-    margin: 0 auto;
-    padding: 15px 0;
-  }
-
-  input {
-    border-radius: 10px;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  #fname, #lname {
-    width: 49%;
-    margin-top: 15px;
-  }
-
-  #email, #phone {
-    width: 100%;
-  }
-
-  button {
-    width: 100%;
-  }
-}
-// Let's Talk Form's
-.letsTalk {
-  form {
-    .formWidth {
-      width: 90%;
-      margin: 0 auto;
-      padding: 5px 0;
-    }
-
-    #fname, #lname {
-      width: 48%;
-      margin-top: 15px;
-    }
-
-    input {
-      font-size: 1.4rem;
-    }
-  }
-}
-//////////////////////////////////
-
 .clearfix::after {
   content: "";
   display: block;
@@ -136,56 +66,6 @@ section:nth-child(1) {
 .newsline {
   background-color: $accent-color;
   border: 1px solid lightgray;
-}
-
-/////////////////////////////////
-/////// Navigation /////////////
-///////////////////////////////
-
-ul {
-  display: inline-block;
-  margin-bottom: 0;
-
-  li {
-    display: inline-block;
-    margin: 5px;
-
-    a {
-      text-decoration: none;
-      color: white;
-    }
-  }
-}
-
-.navLeft{
-  float: left;
-  margin-left: 0;
-
-  li {
-    position: relative;
-    bottom: 10px;
-
-    a {
-      font-size: 1.5rem;
-    }
-
-    img {
-      position: relative;
-      top: 16px;
-    }
-  }
-}
-
-.navRight{
-  float: right;
-  margin-right: 0;
-
-  li {
-
-    a {
-      font-size: 1rem;
-    }
-  }
 }
 
 /////////////////////////////////
@@ -262,6 +142,7 @@ section:nth-child(2) {
     width: 100px;
     border-radius: 50%;
     border: 2px solid orange;
+    margin-top: 25px;
   }
 }
 
@@ -328,81 +209,5 @@ footer {
   height: 50px;
   background-color: $primary-color;
 }
-/////////////////////////////////
-/////// MEDIA QUERIES //////////
-///////////////////////////////
 
-@media screen and (max-width: 400px) {
-  h4 {
-    font-size: 3rem;
-  }
-
-  /////// Navigation /////////////
-  section:nth-child(1) {
-    text-align: center;
-  }
-
-  ul {
-    display: inline-block;
-
-    li {
-
-      a {
-        text-decoration: none;
-        color: white;
-      }
-    }
-  }
-
-  .navLeft{
-    float: none;
-
-    li {
-      position: relative;
-      bottom: 10px;
-
-      a {
-        font-size: 1.3rem;
-      }
-
-      img {
-        position: relative;
-        top: 16px;
-      }
-    }
-  }
-
-  .navRight{
-    float: none;
-    margin-right: 0;
-
-    li {
-
-      a {
-        font-size: 1rem;
-      }
-    }
-  }
-
-  ///////////////////////////////
-  ////Hero Picture /////////////
-  section:nth-child(2) {
-    height: 300px;
-  }
-  .heroText {
-    padding-top: 100px;
-  }
-  ///////////////////////////////
-  .newsline {
-    display: none;
-  }
-
-  .courseOffered {
-    .container {
-      padding: 25px 0;
-    }
-    img {
-      width: 25%;
-    }
-  }
-}
+@import "partials/mediaQueries";
