--- a/css/partials/_navigation.scss
+++ b/css/partials/_navigation.scss
@@ -45,7 +45,7 @@ ul {
   }
 }
 
-.navRight{
+.navRight {
   float: right;
   margin-right: 0;
 
@@ -60,3 +60,51 @@ ul {
     }
   }
 }
+
+/////// Footer /////////////
+footer {
+  padding: 25px 0;
+  li {
+    color: white;
+    text-transform: uppercase;
+    line-height: 1.6;
+    display: block;
+    a {
+      font-size: 1.15rem;
+      color: $font-grey;
+      text-transform: none;
+    }
+    a:hover {
+      padding-bottom: 3px;
+      border-bottom: 2px solid $font-grey;
+    }
+    p {
+      margin: 10px 0 0;
+      padding: 0;
+    }
+  }
+}
+footer .columns:nth-child(3) {
+  a {
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.35rem;
+  }
+}
+
+.footerRight {
+  text-align: right;
+   img {
+     width: 15%;
+   }
+   p {
+     margin: 0;
+     font-size: 1.15rem;
+     color: $font-grey;
+   }
+   a {
+     color: $font-grey;
+     text-decoration: none;
+   }
+ }
+///////////////////////////////
