--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,41 @@ ul {
   .navRight li a:hover {
     text-decoration: underline; }
 
+footer {
+  padding: 25px 0; }
+  footer li {
+    color: white;
+    text-transform: uppercase;
+    line-height: 1.6;
+    display: block; }
+    footer li a {
+      font-size: 1.15rem;
+      color: #727d84;
+      text-transform: none; }
+    footer li a:hover {
+      padding-bottom: 3px;
+      border-bottom: 2px solid #727d84; }
+    footer li p {
+      margin: 10px 0 0;
+      padding: 0; }
+
+footer .columns:nth-child(3) a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.35rem; }
+
+.footerRight {
+  text-align: right; }
+  .footerRight img {
+    width: 15%; }
+  .footerRight p {
+    margin: 0;
+    font-size: 1.15rem;
+    color: #727d84; }
+  .footerRight a {
+    color: #727d84;
+    text-decoration: none; }
+
 form {
   background-color: #D5D5D5;
   border-radius: 10px; }
@@ -64,8 +99,8 @@ form {
 button {
   background-color: #6fbbb7;
   margin-top: 10px;
-  padding: 5px 10px;
-  border-radius: 10px;
+  padding: 10px 10px;
+  border-radius: 8px;
   border: none;
   border-bottom: 2px solid #4fa8a3;
   line-height: normal; }
@@ -84,10 +119,10 @@ button:hover {
   .heroText button p {
     display: inline;
     position: relative;
-    bottom: 5px; }
+    bottom: 10px; }
   .heroText button .fa-play-circle-o {
     font-size: 3.5rem;
-    padding-right: 7px;
+    padding-right: 6px;
     color: white; }
 
 body {
@@ -233,7 +268,6 @@ section:nth-child(2) {
   padding: 25px 0; }
 
 footer {
-  height: 50px;
   background-color: #39474e; }
 
 @media screen and (max-width: 767px) {
@@ -268,6 +302,17 @@ footer {
     margin-right: 0; }
     .navRight li a {
       font-size: 1rem; }
+
+  footer li a {
+    color: #727d84; }
+  footer .footerRight {
+    text-align: left;
+    padding-top: 25px; }
+  footer .columns:nth-child(-n+2) {
+    float: left;
+    width: 50%;
+    padding: 0 5px;
+    box-sizing: border-box; }
 
   section:nth-child(2) {
     height: 300px; }
