--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@ ul {
     margin: 5px; }
     ul li a {
       text-decoration: none;
-      color: white; }
-    ul li a:hover {
-      color: #727d84; }
+      color: white;
+      transition: all 1s ease-in; }
 
 .navLeft {
   float: left;
@@ -19,11 +18,16 @@ ul {
     .navLeft li a {
       font-size: 1.5rem; }
     .navLeft li a:hover {
+      color: #727d84;
       padding-bottom: 5px;
       border-bottom: 2px solid #6fbbb7; }
     .navLeft li img {
       position: relative;
-      top: 16px; }
+      top: 16px;
+      transition: border-bottom 1s, transform 1s, ease-in; }
+    .navLeft li img:hover {
+      border-bottom: none;
+      transform: scale(1.1); }
 
 .navRight {
   float: right;
@@ -182,6 +186,22 @@ section:nth-child(2) {
 
 .heroText {
   padding-top: 250px; }
+
+@keyframes type {
+  0% {
+    width: 0; }
+  10% {
+    width: 0; }
+  90% {
+    width: 100%; }
+  100% {
+    width: 100%; } }
+.typingEffect {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 1px solid #fff;
+  animation: type 4s steps(30, end), infinite;
+  animation-direction: alternate; }
 
 .courseInfo {
   padding: 25px 5px; }
