--- a/css/style.scss
+++ b/css/style.scss
@@ -82,6 +82,22 @@ section:nth-child(2) {
   padding-top: 250px;
 }
 
+
+@keyframes type {
+   0% { width: 0; }
+  10% { width: 0;}
+   90% { width:100%; }
+  100% {width:100%;}
+}
+
+.typingEffect {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 1px solid #fff;
+  animation: type 4s steps(30, end), infinite;
+  animation-direction: alternate;
+}
+
 /////////////////////////////////
 /////// INFO SECTION + COURSES /
 ///////////////////////////////
